klippr (0.4.0) unstable; urgency=low
  * "About" added

 -- martin <martin@unknown>  Tue, 04 Sep 2012 15:17:59 +0200

klippr (0.3.0) unstable; urgency=low
  * First beta release

 -- martin <martin@unknown>  Sat, 01 Sep 2012 21:52:19 +0200

