@@ -25,7 +25,7 @@ Dialog {
              msg += 'Source: <a style="color:red" href="http://github.com/mborho/klippr">http://github.com/mborho/klippr</a><br/>';
              msg += 'Header font: <a style="color:red" href="http://openfontlibrary.org/en/font/sansus-webissimo">Sansus Webissimo</a>'
              msg += '<div><b>Changelog:</b><br/>'
-             msg += '<div>* 0.4.0 - "About" added</div>';
+             msg += '<div>* 0.4.0 - "About" added, UI modifications</div>';
              msg += '</div>';
              msg += '</p><br/>';
              msg += '<table><tr><td valign="middle">powered by </td>';
